@startuml

class Person {
-String firstName
-String lastName
+String getFirstName()
+void setFirstName()
}
Person "1"<-->"*" Store :owns
Store "*"<-->"0..*" Event :is involved
class Store{
-int storeId
+int getStoreId()
+void setStoreId()
-String storeName
+String getStoreName()
+void setStoreName()
-int rent
+int getRent()
+void setRent()
-Person shopkeeper
+Person getShopKeeper()
+void setShopKeeper()
-Category category
+Category getCategory()
+void setCategory()
+ String toString()
}

class Event{
-Date date
+Date getDate()
+void setDate()
-String name
+String getName()
+void setName()
-List<Store> involvedStores
+Store getInvolvedStore()
+void setInvolveldStore()
+ String toString()

}

enum Category {
    CLOTHING
    BOOKS
    ELECTRONICS
    GASTRONOMY
    ENTERTAINMENT
}

@enduml
